[package]
name = "papertool"
version = "0.1.0"
authors = ["Florian Jung <flo@windfisch.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.23.1"
once_cell = "1.4.0"
semanticscholar = "0.1.0"
soup = "0.5.0"
reqwest = {version="0.10", features=["blocking"]}
colored = "1.9"
regex = "1.3"
lazy_static = "1.4"
